# TE3001B_ROS_Challenges

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
install/examples_rclcpp_async_client/lib/examples_rclcpp_async_client/: client_main
install/examples_rclcpp_async_client/share/examples_rclcpp_async_client/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/examples_rclcpp_cbg_executor/include/examples_rclcpp_cbg_executor/: ping_node.hpp  pong_node.hpp
install/examples_rclcpp_cbg_executor/lib/examples_rclcpp_cbg_executor/: ping  ping_pong  pong
install/examples_rclcpp_cbg_executor/share/examples_rclcpp_cbg_executor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  (+2 more)
log/: latest_build
minichallenge3/micro_ros_esp32_node/: micro_ros_esp32_node.ino
src/: test.py
src/MiniChallenge2/: CMakeLists.txt  package.xml
src/MiniChallenge2/launch/: signal.launch.py
src/MiniChallenge2/src/: signal_generator.cpp
src/action_tutorials_cpp/: CMakeLists.txt  package.xml
src/action_tutorials_cpp/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
src/minichallenge1/: package.xml  setup.py
src/minichallenge1/launch/: signal_processing.launch  signal_processing_launch.py
src/minichallenge1/minichallenge1/: process.py
src/minichallenge2/: CMakeLists.txt  package.xml
src/minichallenge2/config/: signal_parameters.yaml
src/minichallenge2/launch/: signal.launch.py
src/minichallenge2/src/: signal_generator.cpp  signal_reconstruction.cpp
src/ros_msgs/: CMakeLists.txt  README.md  package.xml
src/ros_msgs/msg/: SignalParams.msg
src/tutorials/: package.xml  setup.py
src/tutorials/install/: local_setup.sh  setup.sh  setup.zsh
src/tutorials/launch/: signal_processing.launch  signal_processing_launch.py
src/tutorials/log/: latest_build
src/tutorials/tutorials/: holder.py  signal.py
(+207 files in other folders)
